git-annex (5.20140708) UNRELEASED; urgency=medium

  * Fix git version that supported --no-gpg-sign.
  * Fix bug in automatic merge conflict resolution, when one side is an
    annexed symlink, and the other side is a non-annexed symlink.

 -- Joey Hess <joeyh@debian.org>  Tue, 08 Jul 2014 12:44:42 -0400

git-annex (5.20140707) unstable; urgency=medium

  * assistant: Fix bug, introduced in last release, that caused the assistant
    to make many unncessary empty merge commits.
  * assistant: Fix one-way assistant->assistant sync in direct mode.
  * Fix bug in annex.queuesize calculation that caused much more
    queue flushing than necessary.
  * importfeed: When annex.genmetadata is set, metadata from the feed
    is added to files that are imported from it.
  * Support users who have set commit.gpgsign, by disabling gpg signatures
    for git-annex branch commits and commits made by the assistant.
  * Fix memory leak when committing millions of changes to the git-annex
    branch, eg after git-annex add has run on 2 million files in one go.
  * Support building with bloomfilter 2.0.0.
  * Run standalone install process when the assistant is started
    (was only being run when the webapp was opened).
  * Android: patch git to avoid fchmod, which fails on /sdcard.
  * Windows: Got rid of that pesky DOS box when starting the webapp.
  * Windows: Added Startup menu item so assistant starts automatically
    on login.
  * Windows: Fix opening file browser from webapp when repo is in a
    directory with spaces.
  * Windows: Assistant now logs to daemon.log.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2014 12:24:13 -0400

git-annex (5.20140613) unstable; urgency=medium

  * Ignore setsid failures.
  * Avoid leaving behind .tmp files when failing in some cases, including
    importing files to a disk that is full.
  * Avoid bad commits after interrupted direct mode sync (or merge).
  * Fix build with wai 0.3.0.